Se Modifico la conexion a firebase y se actualizo el archivo Readme

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,1 @@
-<footer>
-    <p>
-      This is application footer
-    </p>
-  </footer>
+<mat-toolbar class="example-footer">Footer</mat-toolbar>
