--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,9 +1,6 @@
-// footer {
-//     background-color: secundary;
-//     height:150px;
-//     width: 100%;
-//     position: absolute;
-//     bottom: 0;
-//     color: black;
-//     z-index: 2;
-//   }
+.example-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
