--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,25 @@
 <mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="sidenav.toggle()">
+    <mat-icon>menu</mat-icon>
+  </button>
   <span>CRUD Angular</span>
   <span class="example-spacer"></span>
-  <button mat-button routerLink="/home">Home</button>
-  <button mat-button routerLink="/users">UserList</button>
+  <div class="example-button-row">
+    <button mat-button routerLink="/">Home</button>
+    <button mat-button routerLink="/users">UserList</button>
+  </div>
   <span class="example-spacer"></span>
-
 </mat-toolbar>
+
+
+<mat-sidenav-container class="example-container"  >
+  <mat-sidenav mode="side" #sidenav class="example-sidenav">
+    <mat-nav-list >
+      <a mat-list-item routerLink="/">Home</a>
+      <a mat-list-item routerLink="/users">UserList</a>
+    </mat-nav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
