--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,41 +1,32 @@
+.example-container {
+    position: absolute;
+    top: 56px;
+    bottom: 60px;
+    left: 0;
+    right: 0;
+}
 
+.example-sidenav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+}
 
-// .sidenav-container {
-//     height: 100%;
-//   }
+.example-icon{
+    display: none;
+}
   
-//   mat-toolbar.mat-primary {
-//     position: sticky;
-//     top: 0;
-//   }
-// .example-container {
-//     display: flex;
-//     flex-direction: column;
-//     height: 100%;
-//   }
-  
-//   .example-is-mobile .example-toolbar {
-//     position: fixed;
-//     /* Make sure the toolbar will stay on top of the content as it scrolls past. */
-//   }
-  
-//   h1.example-app-name {
-//     margin-left: 8px;
-//   }
-  
-//   .example-sidenav-container {
-//     /* When the sidenav is not fixed, stretch the sidenav container to fill the available space. This
-//        causes `<mat-sidenav-content>` to act as our scrolling element for desktop layouts. */
-//     flex: 1;
-//   }
-  
-//   .example-is-mobile .example-sidenav-container {
-//     /* When the sidenav is fixed, don't constrain the height of the sidenav container. This allows the
-//        `<body>` to be our scrolling element for mobile layouts. */
-//     flex: 1 0 auto;
-//   }
-  
+@media (max-width: 768px) {
+    .example-icon{
+        display: block;
+    }
+    .example-button-row{
+        display: none;
+    }
+}
 
-//   mat-sidenav {
-//     width: 200px;
-//   }
+mat-sidenav {
+    width: 200px;
+}
+
