--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+
     <mat-toolbar>
       <span>UserList</span>
       <span class="example-spacer"></span>
@@ -6,37 +6,35 @@
         <button mat-flat-button color="primary" routerLink="/new">add user</button>
       </div>
     </mat-toolbar>
-    <div>
-      <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput [(ngModel)]="filterValue" placeholder="Name">
-      </mat-form-field>
-      
+    <mat-form-field>
+      <mat-label>Filter</mat-label>
+      <input matInput [(ngModel)]="filterValue" placeholder="Name">
+    </mat-form-field>
+    <div class="table-container">
+      <li *ngFor="let user of users">
+        {{ user.name }} - {{ user.name }}
+        
+      </li>
       <table mat-table [dataSource]="dataSource | filter:filterValue" class="mat-elevation-z8">
-
-        <!-- User Column -->
         <ng-container matColumnDef="username">
           <th mat-header-cell *matHeaderCellDef> Username </th>
           <td mat-cell *matCellDef="let element"> {{element.username}} </td>
         </ng-container>
         
-        <!-- Name Column -->
         <ng-container matColumnDef="name">
           <th mat-header-cell *matHeaderCellDef> Name </th>
           <td mat-cell *matCellDef="let element"> {{element.name}} </td>
         </ng-container>
         
         
-        <!-- Email Column -->
         <ng-container matColumnDef="email">
           <th mat-header-cell *matHeaderCellDef> Email </th>
           <td mat-cell *matCellDef="let element"> {{element.email}} </td>
         </ng-container>
 
-        <!-- Actions Column -->
         <ng-container matColumnDef="actions">
           <th mat-header-cell *matHeaderCellDef></th>
-          <td mat-cell *matCellDef="let element" style="text-align:right">
+          <td mat-cell *matCellDef="let element" style="text-align: right;" class="a-container">
             <a class="edit" matTooltip="Edit" (click)="editUser(element.id)">
               <mat-icon aria-hidden="false" aria-label="edit icon" fontIcon="editUser"></mat-icon>
             </a>
@@ -51,19 +49,3 @@
 
       </table>
     </div>
-    
-</div>  
-<!-- 
-<h2>Lista de Usuarios</h2>
-<input type="text" placeholder="Buscar por nombre" [(ngModel)]="searchTerm" />
-
-<ul>
-<li *ngFor="let user of users | filter:searchTerm">
-    {{ user.name }} - {{ user.email }} - <button (click)="editUser(user)">Actualizar Usuario</button> - <button (click)="deleteUser(user)">Eliminar Usuario</button>
-</li>
-</ul> -->
-
-<!-- <app-user-form *ngIf="selectedUserId" [userId]="selectedUserId"></app-user-form> -->
-
-<!-- <button (click)="addUser()">Agregar Usuario</button> -->
-
