--- a/src/app/components/user-list/user-list.component.scss
+++ b/src/app/components/user-list/user-list.component.scss
@@ -1,28 +1,34 @@
+.table-container {
+    overflow: auto;
+}
+.a-container {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    padding: 11px;
+}
 table {
     width: 100%;
-    margin-top: 5px;
-  }
-  th {
-    width: 25%;
-  }
+    overflow-x: auto;
+    width: 500px;
+    
+}
 
-  a{
-    cursor: pointer;
-  }
-
-  .edit {
-    color: #3498DB;
-  }
-
-  .delete {
-    color: #E74C3C;
-  }
-
-  table {
-    width: 100%;
-  }
-  
-  .mat-mdc-form-field {
+.mat-mdc-form-field {
     font-size: 14px;
     width: 100%;
   }
+
+a {
+    cursor: pointer;
+}
+
+.edit {
+    color: #3498DB;
+}
+
+.delete {
+    color: #E74C3C;
+}
+
