Se añadio Login y pruebas Unitarias

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,6 +9,9 @@
     <button mat-button routerLink="/users">UserList</button>
   </div>
   <span class="example-spacer"></span>
+  <a (click)="logout()"><mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="logout"></mat-icon>
+  </a>
+
 </mat-toolbar>
 
 
